Fixed wrong call to getDeclaredConstructor